[refac]: admin module converted to standalone

--- a/Client/src/app/modules/admin/components/categories/create-category/create-category.component.html
+++ b/Client/src/app/modules/admin/components/categories/create-category/create-category.component.html
@@ -180,8 +180,8 @@
                     [descriptionPlaceholder]="'Enter meta description here...'"
                     [descriptionHelpfulText]="'Set a meta tag title. Recommended to be simple and precise keywords.'"
                     [tagsLabel]="'Meta Tags'" [tagsPlaceholder]="'Enter tags here...'"
-                    [tagsHelpfulText]="'Set a list of keywords that the category is related to. Separate the keywords by adding a comma , between each keyword.'"
-                    (seoGeneralFormValues)="onSeoGeneralFormValues($event)"></app-seo-general-form>
+                    [tagsHelpfulText]="'Set a list of keywords that the category is related to. Separate the keywords by adding a comma , between each keyword.'">
+                </app-seo-general-form>
 
             </div>
         </div>
