--- a/Client/src/app/modules/public/components/login/login.component.html
+++ b/Client/src/app/modules/public/components/login/login.component.html
@@ -1,4 +1,4 @@
-<section class="relative flex flex-wrap lg:items-center">
+<section class="relative flex flex-wrap lg:items-center w-100 justify-center">
     <div class="w-full px-4 py-12 sm:px-6 sm:py-16 lg:w-1/2 lg:px-8 lg:py-24">
       <div class="mx-auto max-w-lg text-center">
         <h1 class="text-2xl font-bold sm:text-3xl">Welcome back!</h1>
