--- a/Client/src/app/modules/public/components/navigation/navigation.component.html
+++ b/Client/src/app/modules/public/components/navigation/navigation.component.html
@@ -151,16 +151,18 @@
 
             <!-- Login/Logout button -->
             @if((_accountService.currentUser$ | async)){
-            <button (click)="logout()"
-                class="text-sm font-medium text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 cursor-pointer hover:shadow-transparent">
-                <span aria-hidden="true">&larr;</span>
-                Log out
+            <button (click)="logout()" class="flex items-center space-x-2 bg-indigo-600 hover:bg-indigo-700 text-gray-100 px-4 py-2 rounded transition duration-150" title="Log out">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                    <path fill-rule="evenodd" d="M9.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L7.414 9H15a1 1 0 110 2H7.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd"></path>
+                </svg>
+                <span>Log out</span>
             </button>
             }
             @else {
-            <button routerLink="/login"
-                class="text-sm font-medium text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 hover:shadow-transparent">Log
-                in <span aria-hidden="true">&rarr;</span></button>
+                <button routerLink="/login" class="flex items-center space-x-2 bg-indigo-600 hover:bg-indigo-700 text-gray-100 px-4 py-2 rounded transition duration-150" title="Log in">
+                <span>Log in</span>
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 448 512"><path d="M438.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L338.8 224 32 224c-17.7 0-32 14.3-32 32s14.3 32 32 32l306.7 0L233.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160z"/></svg>
+            </button>
             }
         </div>
     </nav>
@@ -249,9 +251,14 @@
                             }
                         </div>
                         @if((_accountService.currentUser$ | async)){
-                        <a routerLink="/login"
+                        <a (click)="logout()"
                             class="font-medium leading-6 text-white p-2 px-3 rounded-md bg-indigo-500 shadow-lg shadow-indigo-500/50 flex align-middle w-full text-center justify-center items-center">
-                            <span aria-hidden="true">&larr;</span>&nbsp;
+                            <span aria-hidden="true">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
+                                    <path fill-rule="evenodd" d="M9.707 14.707a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414l4-4a1 1 0 011.414 1.414L7.414 9H15a1 1 0 110 2H7.414l2.293 2.293a1 1 0 010 1.414z" clip-rule="evenodd">
+                                    </path>
+                                </svg>
+                            </span>
                             Log out
                         </a>
                         }
