[refac]: added image remove function [feat]: added toast service, added spinner

--- a/Client/src/app/modules/admin/components/categories/create-category/create-category.component.html
+++ b/Client/src/app/modules/admin/components/categories/create-category/create-category.component.html
@@ -18,8 +18,7 @@
                     <app-file-upload
                         [imageUpload]="imageUploadForm" 
                         [altAttribute]="'Category main image'"
-                        [titleAttribute]="'Category main image'"
-                        (fileSelected)="onFileSelected($event)"></app-file-upload>
+                        [titleAttribute]="'Category main image'"></app-file-upload>
                 </div>
 
                 <!-- Parent category -->
