[feat]: added tailwind line clamp lib

--- a/Client/src/app/modules/admin/components/categories/create-category/create-category.component.html
+++ b/Client/src/app/modules/admin/components/categories/create-category/create-category.component.html
@@ -54,7 +54,7 @@
                                             <label for="parent-Category-{{item.id}}" class="font-medium text-gray-900 ">
                                                 <div>{{item.name}}</div>
                                                 <p id="parent-Category-{{item.id}}-text"
-                                                    class="text-xs font-normal text-gray-500 ">
+                                                    class="text-xs font-normal text-gray-500 line-clamp-2">
                                                     {{item.description}}</p>
                                             </label>
                                         </div>
